# creamapi_auto_for_linux

./: .gitignore  Cargo.toml  README.md  build_appimage.sh  creamapi-auto.desktop  install.sh
.github/workflows/: opencode.yml  release.yml
AppDir/: .DirIcon  AppRun  vapordose.desktop
AppDir/usr/lib/: libXau.so.6  libXcursor.so.1  libXdamage.so.1  libXdmcp.so.6  libXext.so.6  libXfixes.so.3  libXi.so.6  libXinerama.so.1  libXrandr.so.2  libXrender.so.1  libadwaita-1.so.0  libappstream.so.5  libavahi-client.so.3  libavahi-common.so.3  libblkid.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbz2.so.1.0  libcairo-gobject.so.2  libcairo-script-interpreter.so.2  libcairo.so.2  libcloudproviders.so.0  libcolord.so.2  libcups.so.2  libcurl.so.4  libdatrie.so.1  libdbus-1.so.3  libdeflate.so.0  libdw.so.1  libelf.so.1  libepoxy.so.0  libffi.so.8  libfyaml.so.0  libgdk_pixbuf-2.0.so.0  libgio-2.0.so.0  libglib-2.0.so.0  libglycin-2.so.0  libgmodule-2.0.so.0  libgnutls.so.30  libgobject-2.0.so.0  (+67 more)
AppDir/usr/share/applications/: vapordose.desktop
src/: config.rs  injector.rs  main.rs  steam_scanner.rs  ui_main.rs  updater.rs  utils.rs
