[package]
name = "cream-api-auto"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
bytes = "1.1"

